Revert "Remove modeltranslation"
This reverts commit 909fd6e7959813e3eac9ed3a1771e135be73d8de.

--- a/core/static/core/css/editor.css
+++ b/core/static/core/css/editor.css
@@ -37,6 +37,10 @@ body .image-chooser .chosen {
     background: none!important;
 }
 
+#tab-arabic input {
+    direction: rtl;
+}
+
 .tab-nav a.required-for-language:after {
     border-radius: 50px;
     box-shadow: 1px 2px 2px rgba(0,0,0,.1);
